# xor-smc

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  complex_test.cpp  disaster_plan.cpp  more_tests.cpp  simple_example.cpp  smc_test.cpp  test_count.cpp
include/xor_smc/: CDCLSolver.hpp  Formula.hpp  Literal.hpp  Solver.hpp
src/: CDCLSolver.cpp  Formula.cpp  Solver.cpp
